Fixed template sample and added a test for it
Removed duplicated section in the Robinhood v3 template
configuration. Moved the include files into includes/, to reflect the
real installation and updated the paths in the template. Added test
501d to check the template is valid.

Change-Id: If739127b811388afdd5339f2bb7ea1518c81b9c8

--- a/doc/templates_v3/template.conf
+++ b/doc/templates_v3/template.conf
@@ -9,9 +9,9 @@ General {
 #### policy definitions ####
 
 # include template policy definitions for Lustre/HSM
-%include "lhsm.inc"
+%include "includes/lhsm.inc"
 # include template policy definitions for legacy TMPFS flavor
-%include "tmpfs.inc"
+%include "includes/tmpfs.inc"
 
 #### fileclass definitions ####
 
@@ -156,20 +156,6 @@ cleaning_trigger {
     low_threshold_cnt  = 100M;
     check_interval     = 5min;
 }
-
-#### Deleting old unused files #######
-
-lhsm_release_parameters {
-    nb_threads = 8;
-## purge 1000 files max at once
-#    max_action_count = 1000;
-#    max_action_volume = 1TB;
-
-    # suspend policy run if action error rate > 50% (after 100 errors)
-    suspend_error_pct = 50%;
-    suspend_error_min= 100;
-}
-
 
 ########### end of policy rules ############
 
