--- a/tests/lustre_fs/cfg/rmdir.conf
+++ b/tests/lustre_fs/cfg/rmdir.conf
@@ -5,17 +5,27 @@
 
 %include "common.conf"
 
-Rmdir_policy
-{
-    age_rm_empty_dirs = 15s;
-
-    recursive_rmdir
-    {
-        path == "/mnt/lustre/remove_me.*"
+filesets {
+    fileclass remove_it {
+        definition { path == "/mnt/lustre/remove_me.*" }
     }
 }
 
-Rmdir_parameters
+
+rmdir_empty_rules
 {
-    nb_threads = 1;
+    rule default {
+        condition { last_mod > 20s }
+    }
 }
+
+rmdir_recurse_rules {
+    rule recursive_rmdir
+    {
+        target_fileclass = remove_it;
+        condition { last_mod > 10s }
+    }
+}
+
+rmdir_empty_parameters { nb_threads = 1; }
+rmdir_recurse_parameters { nb_threads = 1; }
