fix tests 219,220 + enable them for HSM flavors.
Change-Id: I1db3fbef7b58790d10869ebefd29e1651bf85ddf

--- a/tests/lustre_fs/cfg/RemovingDir_Mixed.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_Mixed.conf
@@ -7,9 +7,30 @@
 
 %include "common.conf"
 
-rmdir_policy
+filesets {
+    fileclass empty_dir { definition{ type == directory and dircount == 0 } }
+    fileclass dir1 { definition { type == directory and name == "dir1" } }
+}
+
+define_policy rmdir
 {
-    age_rm_empty_dirs = 10sec;
+    scope { type == directory }
+    status_manager = none;
+    default_action = common.rmdir;
+    default_lru_sort_attr = last_mod;
+}
+
+rmdir_rules {
     ignore { tree == "/mnt/lustre/no_rm"  }
-    recursive_rmdir { name == "dir1" }
+
+    rule rmdir_empty {
+        target_fileclass = empty_dir;
+        condition { last_mod > 10s }
+    }
+
+    rule rmdir_recurse {
+        target_fileclass = dir1;
+        action = cmd("rm -rf {fullpath}");
+        condition { last_mod >= 0s }
+    }
 }
