--- a/tests/lustre_fs/cfg/test_custom_purge.conf
+++ b/tests/lustre_fs/cfg/test_custom_purge.conf
@@ -43,7 +43,7 @@ purge_rules
 
 purge_parameters
 {
-    action = cmd("/bin/rm -f {fsname} {fid} {path}");
+    action = cmd("./rm_script {fsname} {fid} {path}");
 }
 
 ####### Purge trigger ########
