tests: use policy templates shipped with robinhood.
Use templates from 'doc/templates_v3/includes' to run the tests.
These templates are modified to use policy names of test framework
(purge, migration...).

Change-Id: I6cdb0a760850166de76b88f102aeb333108b0340

--- a/doc/templates_v3/template.conf
+++ b/doc/templates_v3/template.conf
@@ -143,14 +143,14 @@ lhsm_release_parameters {
 
 #### Deleting old unused files #######
 
-cleaning_rules {
+cleanup_rules {
     rule default {
         condition { last_access > 30d }
     }
 }
 
 # clean when inode count > 100M
-cleaning_trigger {
+cleanup_trigger {
     trigger_on = global_usage;
     high_threshold_cnt = 100M;
     low_threshold_cnt  = 100M;
