--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -75,4 +75,7 @@ FS_Scan
     Ignore { path == "/mnt/lustre/.lustre" }
 }
 
+# this one is generated from original template
 %include "test_policies.inc"
+# always include rmdir policies (tested with all tests flavors)
+%include "../../../doc/templates_v3/includes/rmdir.inc"
