tests: adapt tests of rmdir policies.
Renumbered tests 600's, to group tests running the same functions.

Adapt tests 615* to robinhood v3.

Add more explicit messages in case of parsing error in policy rules.

Change-Id: I3b5cee3b7814f163af140fa4dc2ed00a1e7e2e63

--- a/tests/lustre_fs/cfg/RemovingDir_LastAccess.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_LastAccess.conf
@@ -7,10 +7,10 @@
 
 %include "common.conf"
 
-Rmdir_Policy
+rmdir_recurse_rules
 {
-    recursive_rmdir
+    rule default
     {
-        last_access > 30sec
+        condition { last_access > 10sec }
     }
 }
