--- a/tests/lustre_fs/cfg/RemovingDir_LastModification.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_LastModification.conf
@@ -7,10 +7,10 @@
 
 %include "common.conf"
 
-Rmdir_Policy
+rmdir_recurse_rules
 {
-    recursive_rmdir
+    rule default
     {
-        last_mod > 30sec
+        condition { last_mod > 10sec }
     }
 }
