--- a/tests/lustre_fs/cfg/RemovingDir_OST.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_OST.conf
@@ -7,10 +7,10 @@
 
 %include "common.conf"
 
-Rmdir_Policy
+rmdir_recurse_rules
 {
-    recursive_rmdir
+    rule default
     {
-        ost_index == 1
+        condition { ost_index = 1 }
     }
 }
