--- a/tests/lustre_fs/cfg/RemovingEmptyDir.conf
+++ b/tests/lustre_fs/cfg/RemovingEmptyDir.conf
@@ -7,8 +7,11 @@
 
 %include "common.conf"
 
-Rmdir_Policy
+rmdir_recurse_rules
 {
-    age_rm_empty_dirs = 30sec;
+    rule default
+    {
+        condition { dircount == 0 and last_mod > 10sec }
+    }
 }
 
