--- a/tests/lustre_fs/cfg/RemovingDir_Dircount.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_Dircount.conf
@@ -7,10 +7,10 @@
 
 %include "common.conf"
 
-Rmdir_Policy
+rmdir_recurse_rules
 {
-    recursive_rmdir
+    rule default
     {
-        dircount > 1
+        condition{ dircount > 1 }
     }
 }
