--- a/tests/lustre_fs/cfg/RemovingDir_ExtendedAttribute.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_ExtendedAttribute.conf
@@ -7,10 +7,10 @@
 
 %include "common.conf"
 
-Rmdir_Policy
+rmdir_recurse_rules
 {
-    recursive_rmdir
+    rule default
     {
-        xattr.user.foo == "abc.[1-5].*"
+        condition { xattr.user.foo == "abc.[1-5].*" }
     }
 }
