--- a/tests/lustre_fs/cfg/RemovingDir_Owner.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_Owner.conf
@@ -7,10 +7,10 @@
 
 %include "common.conf"
 
-Rmdir_Policy
+rmdir_recurse_rules
 {
-    recursive_rmdir
+    rule default
     {
-        owner == "testuser"
+        condition { owner == "testuser" }
     }
 }
