doc: include alert template to general template.
Change-Id: Ibf4dd59c5a04d915a7f4678089502aa514c07628

--- a/doc/templates_v3/template.conf
+++ b/doc/templates_v3/template.conf
@@ -12,6 +12,8 @@ General {
 %include "includes/lhsm.inc"
 # include template policy definitions for legacy TMPFS flavor
 %include "includes/tmpfs.inc"
+# include template for alerts
+%include "includes/alerts.inc"
 
 #### fileclass definitions ####
 
@@ -43,6 +45,19 @@ Filesets {
         FileClass big_files {
             definition { type == file and size > 1GB }
         }
+
+        FileClass largedir {
+            definition { type == directory and dircount > 10000 }
+        }
+
+        FileClass f1 {
+            definition { type == file and name == "file.1" }
+        }
+
+        FileClass f2 {
+            definition { type == file and name == "file.2" }
+        }
+
 }
 
 #### Lustre/HSM archive configuration ####
@@ -157,6 +172,31 @@ cleanup_trigger {
     check_interval     = 5min;
 }
 
+### Alerts specification 
+alert_rules {
+
+    rule raise_alert {
+        ## List all fileclasses that would raise alerts HERE:
+        target_fileclass = f1;
+        target_fileclass = f2;
+        target_fileclass = largedir;
+
+        # customize alert title:
+        action_params { title = "entry matches '{fileclass}' ({rule})"; }
+
+        # apply to all matching fileclasses in the policy scope
+        condition = true;
+    }
+
+    # clear alert status
+    rule default {
+        action = none;
+        action_params { alert = clear; }
+        # apply to all entries that don't match 'alert_check'
+        condition = true;
+    }
+}
+
 ########### end of policy rules ############
 
 
@@ -188,6 +228,7 @@ Log {
 
     # set alert_file, alert_mail or both depending on the alert method you wish
     alert_file = "/var/log/robinhood/lustre_alerts.log";
+    alert_show_attrs = yes;
 }
 
 ListManager {
