Alerts: fixes and tests.
Test 500 is now successful.

Change-Id: I6dbb494be56d4d1cb54e8a321ee1a20d86d78b0e

--- a/tests/lustre_fs/cfg/log_common.conf
+++ b/tests/lustre_fs/cfg/log_common.conf
@@ -55,4 +55,36 @@ backup_config
     check_mounted = FALSE;
 }
 
+# "legacy policies"
 %include "test_policies.inc"
+# alert policy definition
+%include "../../../doc/templates_v3/includes/alerts.inc"
+
+# define common alert rules for all log* tests
+filesets {
+    fileclass file1 { definition { name == "file.1" } }
+    fileclass file2 { definition { name == "file.2" } }
+}
+
+### Alerts specification
+alert_rules {
+    rule raise_alert {
+        ## HERE, list all fileclasses that must raise an alert:
+        target_fileclass = file1;
+        target_fileclass = file2;
+
+        # customize alert title:
+        action_params { title = "entry matches '{fileclass}' ({rule})"; }
+
+        # apply to all matching fileclasses in the policy scope
+        condition = true;
+    }
+
+    # clear alert status
+    rule default {
+        action = none;
+        action_params { alert = clear; }
+        # apply to all entries that don't match 'alert_check'
+        condition = true;
+    }
+}
