Fix tests 107b, 206, 207 for posix mode
Change-Id: I17a414a40aa3d01f7f29bd65a8ce3442ddcdb519

--- a/tests/posix_fs/cfg/common.conf
+++ b/tests/posix_fs/cfg/common.conf
@@ -35,15 +35,9 @@ ListManager
 		password = "robinhood";
         engine = InnoDB;
 	}
-
-	SQLite {
-	        db_file = "/tmp/robinhood_sqlite_db" ;
-        	retry_delay_microsec = 1000 ;
-	}
 }
 
-# for tests with backup purpose
-Backend
-{
-	opt_string = "root=/tmp/backend";
-}
+# this one is generated from original template
+%include "test_policies.inc"
+# always include rmdir policies (tested with all tests flavors)
+%include "../../../doc/templates_v3/includes/rmdir.inc"
