--- a/tests/posix_fs/cfg/test_purge.conf
+++ b/tests/posix_fs/cfg/test_purge.conf
@@ -32,11 +32,9 @@ purge_rules
 {
     policy default
     {
-        # We can release files that have not been accessed
-        # for more than 10s
         condition
         {
-            last_access > 40s
+            last_access > 15s
         }
     }
 }
@@ -46,7 +44,7 @@ purge_rules
 # trigger purge on OST if its usage exceeds 85%
 purge_trigger
 {
-    trigger_on         = OST_usage ;
+    trigger_on         = global_usage ;
     high_threshold_pct = 85% ;
     low_threshold_pct  = 80% ;
     check_interval     = 5min ;
