--- a/tests/posix_fs/cfg/test_updt.conf
+++ b/tests/posix_fs/cfg/test_updt.conf
@@ -7,7 +7,7 @@
 
 %include "common.conf"
 
-db_update_policy
+db_update_params
 {
     md_update   = on_event_periodic(5s,30s);
     fileclass_update = periodic(10s);
