--- a/tests/posix_fs/cfg/test_purge2.conf
+++ b/tests/posix_fs/cfg/test_purge2.conf
@@ -81,10 +81,9 @@ purge_rules
 
 ####### Purge trigger ########
 
-# trigger purge on OST if its usage exceeds 85%
 purge_trigger
 {
-    trigger_on         = OST_usage ;
+    trigger_on         = global_usage ;
     high_threshold_pct = 85% ;
     low_threshold_pct  = 80% ;
     check_interval     = 5min ;
