tests: make lustre test suite support POSIX filesystems too.
Avoid to support both test suites (Lustre and POSIX).

Change-Id: I92fd4b66d969e58148c60c1e84b227c7ef8e0bb1

--- a/tests/lustre_fs/cfg/OtherParameters_1.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_1.conf
@@ -8,8 +8,8 @@ EntryProcessor
 
 General
 {
-	fs_path = /mnt/lustre;
-	fs_type = lustre;
+	fs_path = $ROOT;
+	fs_type = $FS_TYPE;
 }
 
 ChangeLog
@@ -50,7 +50,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
