--- a/tests/lustre_fs/cfg/OtherParameters_2.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_2.conf
@@ -4,8 +4,8 @@
 
 General
 {
-	fs_path = /mnt/lustre;
-	fs_type = lustre;
+	fs_path = $ROOT;
+	fs_type = $FS_TYPE;
 	stay_in_fs = TRUE;
 }
 
@@ -34,7 +34,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $DB;
         user = "robinhood";
 		password = "robinhood";
         engine = InnoDB;
