--- a/tests/lustre_fs/cfg/OtherParameters_4.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_4.conf
@@ -1,6 +1,7 @@
 General
 {
-     fs_path = "/mnt/lustre";
+	fs_path = $ROOT;
+	fs_type = $FS_TYPE;
 }
 
 ListManager
@@ -8,7 +9,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
