--- a/tests/lustre_fs/cfg/PurgeClass_Path_Name.conf
+++ b/tests/lustre_fs/cfg/PurgeClass_Path_Name.conf
@@ -6,7 +6,7 @@ Filesets
     {
         Definition
         {
-            path == "/mnt/lustre/dir1/*"
+            path == $MATCH_PATH1
             and
             owner == "root"
         }
