--- a/tests/lustre_fs/cfg/PurgeStd_Path_Name.conf
+++ b/tests/lustre_fs/cfg/PurgeStd_Path_Name.conf
@@ -6,7 +6,7 @@ purge_rules
 	{
 		condition
         {
-            path == "/mnt/lustre/dir2/*"
+            path == $MATCH_PATH2
         }
     }
 }
