--- a/tests/lustre_fs/cfg/RemovingDir_Mixed.conf
+++ b/tests/lustre_fs/cfg/RemovingDir_Mixed.conf
@@ -21,7 +21,7 @@ define_policy rmdir
 }
 
 rmdir_rules {
-    ignore { tree == "/mnt/lustre/no_rm"  }
+    ignore { tree == $NO_RM_TREE }
 
     rule rmdir_empty {
         target_fileclass = empty_dir;
