--- a/tests/lustre_fs/cfg/overflow.conf
+++ b/tests/lustre_fs/cfg/overflow.conf
@@ -3,7 +3,8 @@
 
 General
 {
-    fs_path = "/mnt/lustre";
+	fs_path = $ROOT;
+	fs_type = $FS_TYPE;
     fs_key = $FS_KEY ;
 }
 
@@ -12,7 +13,7 @@ ListManager
     MySQL
     {
         server = "localhost";
-        db = "robinhood_lustre";
+		db = $DB;
         user = "robinhood";
         # password or password_file are mandatory
         password = "robinhood";
