--- a/tests/lustre_fs/cfg/rmdir.conf
+++ b/tests/lustre_fs/cfg/rmdir.conf
@@ -7,10 +7,9 @@
 
 filesets {
     fileclass remove_it {
-        definition { path == "/mnt/lustre/remove_me.*" }
+        definition { path == $MATCH_PATH }
     }
 }
-
 
 rmdir_empty_rules
 {
