--- a/tests/lustre_fs/cfg/OtherParameters_5.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_5.conf
@@ -3,8 +3,8 @@
 
 General
 {
-	fs_path = /mnt/lustre;
-	fs_type = lustre;
+	fs_path = $ROOT;
+	fs_type = $FS_TYPE;
 }
 
 # ChangeLog Reader configuration
@@ -47,7 +47,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
