--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -7,8 +7,8 @@
 
 General
 {
-	fs_path = /mnt/lustre;
-	fs_type = lustre;
+	fs_path = $ROOT;
+	fs_type = $FS_TYPE;
 }
 
 # ChangeLog Reader configuration
