tests: drop all hard coded db names.
Change DB to RH_DB, and ROOT to RH_ROOT to avoid collisions.
Also remove all ignore "/mnt/lustre/.lustre".

Change-Id: Id7daa317d2317a0f72cd2f579feb74a0a3b90069

--- a/tests/test_suite/cfg/OtherParameters_1.conf
+++ b/tests/test_suite/cfg/OtherParameters_1.conf
@@ -8,7 +8,7 @@ EntryProcessor
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -50,7 +50,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = $DB;
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
@@ -69,11 +69,6 @@ backup_config
     root = "/tmp/backend";
     mnt_type=ext4;
     check_mounted = FALSE;
-}
-
-FS_Scan
-{
-    Ignore { path == "/mnt/lustre/.lustre" }
 }
 
 %include "test_policies.inc"
