--- a/tests/test_suite/cfg/OtherParameters_2.conf
+++ b/tests/test_suite/cfg/OtherParameters_2.conf
@@ -4,7 +4,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 	stay_in_fs = TRUE;
 }
@@ -34,7 +34,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = $DB;
+		db = $RH_DB;
         user = "robinhood";
 		password = "robinhood";
         engine = InnoDB;
@@ -52,11 +52,6 @@ backup_config
     root = "/tmp/backend";
     mnt_type=ext4;
     check_mounted = FALSE;
-}
-
-FS_Scan
-{
-    Ignore { path == "/mnt/lustre/.lustre" }
 }
 
 %include "test_policies.inc"
