--- a/tests/test_suite/cfg/OtherParameters_4.conf
+++ b/tests/test_suite/cfg/OtherParameters_4.conf
@@ -1,6 +1,6 @@
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -9,7 +9,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = $DB;
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
