--- a/tests/test_suite/cfg/compress.conf
+++ b/tests/test_suite/cfg/compress.conf
@@ -3,7 +3,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -49,7 +49,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = $DB;
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
@@ -68,11 +68,6 @@ backup_config
     mnt_type=ext4;
     check_mounted = FALSE;
     compress = $compress;
-}
-
-FS_Scan
-{
-    Ignore { path == "/mnt/lustre/.lustre" }
 }
 
 %include "test_policies.inc"
