--- a/tests/test_suite/cfg/overflow.conf
+++ b/tests/test_suite/cfg/overflow.conf
@@ -3,7 +3,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
     fs_key = $FS_KEY ;
 }
@@ -13,7 +13,7 @@ ListManager
     MySQL
     {
         server = "localhost";
-		db = $DB;
+		db = $RH_DB;
         user = "robinhood";
         # password or password_file are mandatory
         password = "robinhood";
