--- a/tests/test_suite/cfg/test_completion.conf
+++ b/tests/test_suite/cfg/test_completion.conf
@@ -3,7 +3,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -47,7 +47,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
@@ -70,7 +70,6 @@ backup_config
 
 FS_Scan
 {
-    Ignore { path == "/mnt/lustre/.lustre" }
     completion_command = $TEST_CMD;
 }
 
