--- a/tests/test_suite/cfg/test_recov2.conf
+++ b/tests/test_suite/cfg/test_recov2.conf
@@ -3,7 +3,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -47,7 +47,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
@@ -67,11 +67,6 @@ backup_config
     mnt_type=ext4;
     check_mounted = FALSE;
     archive_symlinks = FALSE;
-}
-
-FS_Scan
-{
-    Ignore { path == "/mnt/lustre/.lustre" }
 }
 
 ######## Policies for this test ###########
