--- a/tests/test_suite/cfg/tokudb2.conf
+++ b/tests/test_suite/cfg/tokudb2.conf
@@ -3,7 +3,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -12,16 +12,11 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
         engine = TokuDB;
         tokudb_compression = $RBH_TOKU_COMPRESS ;
 	}
-}
-
-FS_Scan
-{
-    Ignore { path == "/mnt/lustre/.lustre" }
 }
