--- a/tests/test_suite/cfg/acct.conf
+++ b/tests/test_suite/cfg/acct.conf
@@ -3,7 +3,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -47,7 +47,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = $DB;
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
