--- a/tests/test_suite/cfg/test_updt.conf
+++ b/tests/test_suite/cfg/test_updt.conf
@@ -7,7 +7,7 @@
 
 General
 {
-	fs_path = $ROOT;
+	fs_path = $RH_ROOT;
 	fs_type = $FS_TYPE;
 }
 
@@ -54,7 +54,7 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = $RH_DB;
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
@@ -73,11 +73,6 @@ backup_config
     root = "/tmp/backend";
     mnt_type=ext4;
     check_mounted = FALSE;
-}
-
-FS_Scan
-{
-    Ignore { path == "/mnt/lustre/.lustre" }
 }
 
 db_update_params
