Fix spec file for posix distribution.
Change-Id: Ifc5b1e06a97627eabd39bc00f99a9cfa6f62df60

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,7 @@ if SHOOK
   rpmbuild_opt += --with shook
 endif
 if HSM_LITE
-  rpmbuild_opt += --with hsm_lite
+  rpmbuild_opt += --with backup
 endif
 
 new: clean all
