Require at least glib2.16 to build (GHashTableIter type).
Change-Id: Ida6e7031b16b52d07bf0777a76f44675b07a74dd

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -25,7 +25,7 @@
 # macro for defining dependencies
 
 %define pkg_dependencies       \
-BuildRequires: glib2-devel     \
+BuildRequires: glib2-devel >= 2.16 \
 BuildRequires: libattr-devel   \
 BuildRequires: mailx \
 %if %{with lustre}             \
