--- a/configure.ac
+++ b/configure.ac
@@ -53,7 +53,7 @@ AC_CHECK_SIZEOF([pthread_t])
 
 AX_ENABLE_FLAG([strict], [Compile with -Wall -Werror], [-Wall -Werror])
 
-PKG_CHECK_MODULES(GLIB2, [glib-2.0])
+PKG_CHECK_MODULES(GLIB2, [glib-2.0 >= 2.16])
 PKG_CHECK_MODULES(GTHREAD2, [gthread-2.0])
 CFLAGS="$CFLAGS $GLIB2_CFLAGS $GTHREAD2_CFLAGS"
 LDFLAGS="$LDFLAGS $GLIB2_LIBS $GTHREAD2_LIBS"
