--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -48,13 +48,12 @@ Prefix: %{_prefix}
 Release: @RELEASE@%{?config_dependant}%{?db_dependant}%{?dist}
 
 
-Summary: Robinhood - Policy engine and accounting tool for large filesystems
+Summary: Policy engine and reporting tool for large filesystems
 License: CeCILL-C
 Group: Applications/System
 Url: http://robinhood.sourceforge.net
 Source0: @PACKAGE@-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
-Summary: Accounting, reporting and purge tool for large filesystems
 Group: Applications/System
 BuildRequires: glib2-devel >= 2.16
 BuildRequires: libattr-devel
