Modified project settings

--- a/project.config
+++ b/project.config
@@ -21,3 +21,8 @@
 	push = +force group user/Thomas Leibovici (tl-cea)
 	pushTag = group user/Thomas Leibovici (tl-cea)
 	pushSignedTag = group user/Thomas Leibovici (tl-cea)
+[receive]
+	requireChangeId = true
+[submit]
+	action = fast forward only
+	mergeContent = false
