Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [project]
-	description = Robinhood Policy Engine : a versatile tool to monitor filesystem contents and schedule actions on filesystem entries.
+	description = Robinhood Policy Engine
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
