tests: enable 'undelete' tests for Lustre/HSM.
Test 224 is OK. Test 115 fails due to partial paths in DB.

Change-Id: I28c5bd21488d42de82f8256a2672f01a74e5b052

--- a/tests/test_suite/cfg/common.conf
+++ b/tests/test_suite/cfg/common.conf
@@ -70,6 +70,11 @@ backup_config
     check_mounted = no;
 }
 
+# Lustre/HSM specific configuration
+lhsm_config {
+    rebind_cmd = "/usr/sbin/lhsmtool_posix --hsm_root=/tmp/backend --archive {archive_id} --rebind {oldfid} {newfid} {fsroot}";
+}
+
 # this one is generated from original template
 %include "test_policies.inc"
 # always include rmdir policies (tested with all tests flavors)
