--- a/tests/test_suite/cfg/common.conf
+++ b/tests/test_suite/cfg/common.conf
@@ -70,6 +70,11 @@ backup_config
     check_mounted = no;
 }
 
+# Lustre/HSM specific configuration
+lhsm_config {
+    rebind_cmd = "/usr/sbin/lhsmtool_posix --hsm_root=/tmp/backend --archive {archive_id} --rebind {oldfid} {newfid} {fsroot}";
+}
+
 # this one is generated from original template
 %include "$RBH_TEST_POLICIES"
 # always include rmdir policies (tested with all tests flavors)
