Added several missing file names to the distribution list
Change-Id: Ib95cce5c55a8ea3b1f2011e6ce0d82bd88081654

--- a/Makefile.am
+++ b/Makefile.am
@@ -82,6 +82,9 @@ EXTRA_DIST= robinhood.spec robinhood.spec.in \
 	doc/install_webgui.txt \
 	doc/templates_v3/includes/lhsm.inc \
 	doc/templates_v3/includes/tmpfs.inc \
+	doc/templates_v3/includes/alerts.inc \
+	doc/templates_v3/includes/backup.inc \
+	doc/templates_v3/includes/rmdir.inc \
 	doc/templates_v3/template.conf \
 	ChangeLog \
 	man/*.1
