test suite: create new rpm for the testsuite
This robinhood-test rpm installs the test suite in
/usr/share/robinhood, and it can be run from any directory on the host.

Change-Id: Ib4c5469f543f7133179eeb3bddc5a51425e6362c

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -107,6 +107,14 @@ Group: Applications/System
 Tools for MDS recovery.
 %endif
 
+%package tests
+Summary: Test suite for Robinhood
+Group: Applications/System
+Requires: robinhood robinhood-adm
+
+%description tests
+Lustre and Posix tests for Robinhood.
+
 %prep
 %setup -q -n @PACKAGE@-%{version}
 
@@ -149,6 +157,10 @@ cp    web_gui/acct/.htaccess $RPM_BUILD_ROOT/%{installdir_www}/robinhood/.
 
 rm -f $RPM_BUILD_ROOT/%{_libdir}/robinhood/librbh_mod_*.a
 rm -f $RPM_BUILD_ROOT/%{_libdir}/robinhood/librbh_mod_*.la
+
+# Add an unmutable copy of the templates for the tests
+mkdir -p $RPM_BUILD_ROOT/%{_datadir}/robinhood/doc
+cp -a doc/templates doc/templates_v3 $RPM_BUILD_ROOT/%{_datadir}/robinhood/doc
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -200,6 +212,12 @@ ldconfig
 # set apache permissions
 %defattr(750,root,apache)
 %{installdir_www}/robinhood
+
+%files tests
+%defattr(-,root,root,-)
+%dir %{_datadir}/robinhood/
+%{_datadir}/robinhood/tests/
+%{_datadir}/robinhood/doc/
 
 %files
 %defattr(-,root,root,-)
