test suite: create new rpm for the testsuite
This rpm lets a user test an installed version of Robinhood.

(DO NOT COMMIT THIS)

Remaining problems:

- the EXTA_DIST for the test_suite is too generic. For instance
  test_policies.inc can get installed.

- RBH_TEST_POLICIES could be made agnostic; it doesn't matter where
  the file is located.

- possibly use autoconf to install the testsuite instead of coding the paths
  in the specfile.

Change-Id: Ib4c5469f543f7133179eeb3bddc5a51425e6362c

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -107,6 +107,14 @@ Group: Applications/System
 Tools for MDS recovery.
 %endif
 
+%package tests
+Summary: Test suite for Robinhood
+Group: Applications/System
+Requires: robinhood robinhood-adm
+
+%description tests
+Lustre and Posix tests for Robinhood.
+
 %prep
 %setup -q -n @PACKAGE@-%{version}
 
@@ -149,6 +157,12 @@ cp    web_gui/acct/.htaccess $RPM_BUILD_ROOT/%{installdir_www}/robinhood/.
 
 rm -f $RPM_BUILD_ROOT/%{_libdir}/robinhood/librbh_mod_*.a
 rm -f $RPM_BUILD_ROOT/%{_libdir}/robinhood/librbh_mod_*.la
+
+mkdir -p $RPM_BUILD_ROOT/%{_datadir}/robinhood/tests/
+install -m 555 tests/*.sh $RPM_BUILD_ROOT/%{_datadir}/robinhood/tests/
+cp -a tests/test_suite $RPM_BUILD_ROOT/%{_datadir}/robinhood/tests/
+mkdir -p $RPM_BUILD_ROOT/%{_datadir}/robinhood/doc
+cp -a doc/templates doc/templates_v3 $RPM_BUILD_ROOT/%{_datadir}/robinhood/doc
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -200,6 +214,11 @@ ldconfig
 # set apache permissions
 %defattr(750,root,apache)
 %{installdir_www}/robinhood
+
+%files tests
+%defattr(-,root,root,-)
+%{_datadir}/robinhood/tests/
+%{_datadir}/robinhood/doc/
 
 %files
 %defattr(-,root,root,-)
